# fojako

./: .gitignore  .mcp.json.template  CLAUDE.md  ENGINEERING.md  LICENSE  PLAN.md  README.md  pyproject.toml
evaluation/: analyze.ipynb  collect_metrics.py  datasets.json  datasets.md  instantiate_tasks.py  score_responses.py  task_runner.py  tasks.json  token_counter.py
src/kotlin_mcp/: server.py  summarizer.py
src/kotlin_mcp/parsers/: __init__.py  base.py  java.py  kotlin.py
