[project]
name = "kotlin-mcp"
version = "0.1.0"
description = "MCP server that summarizes Kotlin/Java files into compact structural representations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-kotlin>=1.1.0",
]

license = "MIT"

[project.optional-dependencies]
eval = [
    "tiktoken>=0.7.0",
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mafmudin/fojako"
Repository = "https://github.com/mafmudin/fojako"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kotlin_mcp"]

[project.scripts]
kotlin-mcp = "kotlin_mcp.server:main"
